--- a/packages/laravel-with-expose/package.json
+++ b/packages/laravel-with-expose/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
+        "bootstrap": "composer install && cp .env.example .env && php artisan key:generate",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
