start on text editor etc.

--- a/packages/expose-react/package.json
+++ b/packages/expose-react/package.json
@@ -21,9 +21,14 @@
     "dlv": "^1.1.2",
     "dset": "^1.0.1",
     "microbundle": "^0.6.0",
-    "preact-context": "^1.0.2",
-    "sortablejs": "^1.7.0",
     "preact": "^8.0.0",
+    "preact-context": "^1.0.2",
+    "prosemirror-commands": "^1.0.7",
+    "prosemirror-keymap": "^1.0.1",
+    "prosemirror-model": "^1.6.1",
+    "prosemirror-state": "^1.2.2",
+    "prosemirror-view": "^1.5.2",
+    "sortablejs": "^1.7.0",
     "unstated": "^2.1.1"
   },
   "peerDependencies": {
