--- a/packages/expose/package.json
+++ b/packages/expose/package.json
@@ -18,6 +18,7 @@
     "@reach/router": "^1.1.1",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "debounce": "^1.2.0",
     "postcss-loader": "^3.0.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
