add initial date and datetime editable types

--- a/packages/expose/package.json
+++ b/packages/expose/package.json
@@ -19,8 +19,10 @@
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
     "debounce": "^1.2.0",
+    "moment": "^2.22.2",
     "postcss-loader": "^3.0.0",
     "react": "^16.5.0",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.5.0",
     "react-transition-group": "^2.4.0",
     "style-loader": "^0.23.0",
