--- a/packages/expose-react/package.json
+++ b/packages/expose-react/package.json
@@ -26,6 +26,7 @@
     "prosemirror-commands": "^1.0.7",
     "prosemirror-keymap": "^1.0.1",
     "prosemirror-model": "^1.6.1",
+    "prosemirror-schema-list": "^1.0.1",
     "prosemirror-state": "^1.2.2",
     "prosemirror-view": "^1.5.2",
     "sortablejs": "^1.7.0",
