--- a/packages/expose/package.json
+++ b/packages/expose/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.0.1",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@reach/router": "^1.1.1",
     "babel-loader": "^8.0.2",
@@ -21,6 +22,11 @@
     "debounce": "^1.2.0",
     "moment": "^2.22.2",
     "postcss-loader": "^3.0.0",
+    "prosemirror-commands": "^1.0.7",
+    "prosemirror-keymap": "^1.0.1",
+    "prosemirror-model": "^1.6.1",
+    "prosemirror-state": "^1.2.2",
+    "prosemirror-view": "^1.5.2",
     "react": "^16.5.0",
     "react-datepicker": "^1.6.0",
     "react-dom": "^16.5.0",
@@ -41,7 +47,8 @@
     ],
     "plugins": [
       "@babel/plugin-proposal-class-properties",
-      "@babel/plugin-proposal-object-rest-spread"
+      "@babel/plugin-proposal-object-rest-spread",
+      "@babel/plugin-syntax-dynamic-import"
     ]
   },
   "postcss": {
