--- a/packages/expose/package.json
+++ b/packages/expose/package.json
@@ -25,6 +25,7 @@
     "prosemirror-commands": "^1.0.7",
     "prosemirror-keymap": "^1.0.1",
     "prosemirror-model": "^1.6.1",
+    "prosemirror-schema-list": "^1.0.1",
     "prosemirror-state": "^1.2.2",
     "prosemirror-view": "^1.5.2",
     "react": "^16.5.0",
