--- a/packages/laravel-with-expose/.gitignore
+++ b/packages/laravel-with-expose/.gitignore
@@ -4,6 +4,8 @@
 /public/js
 /public/css
 /public/mix-manifest.json
+/public/mix-manifest-server.json
+/public/layout-manifest.json
 /storage/*.key
 /vendor
 /.idea
