--- a/packages/laravel-with-expose/package.json
+++ b/packages/laravel-with-expose/package.json
@@ -10,17 +10,20 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "build": "npm run production",
+        "build": "cross-env LARAVEL_ENV=client npm run prod && cross-env LARAVEL_ENV=server npm run prod",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-preset-preact": "^1.1.0",
         "babel-preset-react": "^6.23.0",
+        "clean-webpack-plugin": "^0.1.19",
         "cross-env": "^5.1",
         "expose-react": "0.0.0",
         "laravel-mix": "^2.0",
-        "preact": "^8.3.1",
+        "preact": "^8.3.0",
         "preact-compat": "^3.18.4",
+        "preact-render-to-string": "^3.8.0",
         "prop-types": "^15.6.2",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
