--- a/packages/expose/package.json
+++ b/packages/expose/package.json
@@ -32,6 +32,7 @@
     "react": "^16.5.0",
     "react-datepicker": "^1.6.0",
     "react-dom": "^16.5.0",
+    "react-select": "^2.1.0",
     "react-textarea-autosize": "^7.0.4",
     "react-transition-group": "^2.4.0",
     "style-loader": "^0.23.0",
